--- a/Fiverr gig example/index.html
+++ b/Fiverr gig example/index.html
@@ -40,9 +40,9 @@ SEO service to a limited audience per month at a drastically reduced rate here o
   <ol class="col-md-7">What does this service entail?
     <li>Custom high DA Link Building Campaign, done the right way (no black hat here)</li>
     <li>Content curation for all of your links if required</li>
-    <li>SEO report analysing your webpage with up to 3 of your competitors including recommended on-page changes 
+    <li>SEO report analyzing your webpage with up to 3 of your competitors including recommended on-page changes 
     for your most valuable keyword</li>
-    <li>AHREFS Backlink Analysis of your sites current link profile with a full report to identify issues with
+    <li>AHREFS Backlink Analysis of your site's current link profile with a full report to identify issues with
     previous bad SEO</li>
     <li>Continuous keyword monitoring of your campaign</li>
     <li>Walkthrough on how to set up Google Analytics for your own site.</li>
