--- a/Forms/index.html
+++ b/Forms/index.html
@@ -151,10 +151,10 @@
       <label for="exampleDataList" class="form-label">Datalist search</label>
 <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
 <datalist id="datalistOptions">
-  <option value="San Francisco">
+  <option value=" San Francisco">
   <option value="New York">
   <option value="Seattle">
-  <option value="Los Angeles">
+  <option value=" Los Angeles">
   <option value="A-One Computers">
 </datalist>
 
@@ -413,15 +413,15 @@
   <span class="input-group-text" id="basic addon1">@example.com</span>
 </div>
 <div class="input-group mb-3">
-  <label for="basic-url" class="form-label">your vanity url</label>
+  <label for="basic-URL" class="form-label">your vanity url</label>
   <div class="input-group">
   <span type="text" class="form-group-text" id="basic-addon3">https://example.com/users/</span>
-<input type="text" class="form-control" id="basic-url" aria-describedby="">
+<input type="text" class="form-control" id="basic-URL" aria-describedby="">
 <div class="form-text" id="basic-addon4">example help text goes outside the input group.</div>
 </div>
 <div class="input-group-text mb-3">
   <span class="input-group-text">$</span>
-  <input type="text" class="form-control" aria-label="amount (to the nearest doller) ">
+  <input type="text" class="form-control" aria-label="amount (to the nearest dollar) ">
 <span class="input-group-text">.00</span>
 </div>
 <div class="input-group mb-3">
