--- a/Grid System/index.html
+++ b/Grid System/index.html
@@ -119,7 +119,7 @@
 <div class="col-6 col-md-4 border">col-6 col-md-4</div>
      </div>
 
-<!--columns start at 50% wide on mobileand bump up to 33.3% wide on disktop-->
+<!--columns start at 50% wide on mobile and bump up to 33.3% wide on desktop-->
 
 <div class="row">
 <div class="col-6 col-md-4 border">col-6 col-md-4</div>
@@ -127,7 +127,7 @@
 <div class="col-6 col-md-4 border">col-6 col-md-4</div>
     </div>
 
-<!--columns are always 50% wide one mobie and desktop-->
+<!--columns are always 50% wide one mobile and desktop-->
 
 <div class="row">
     <div class="col-6 border">col-6</div>
