--- a/HTML Entities/index.html
+++ b/HTML Entities/index.html
@@ -14,58 +14,58 @@
     <script src="./bootstrap.bundle.min.js"></script>
     <style>
 body{font-family: Georgia, 'Times New Roman', Times, serif;
-font-style: italic; font-size: normal; background-image: url(./assest/rgb\ theme.jpg);}</style>
+font-style: italic; font-size: normal; background-image: URL(./assest/rgb\ theme.jpg);}</style>
 </head>
 <body>
     <div class="container-fluid">
 <h1>HTML entities:</h1>
-<p class="col-md-7">some characters are reserved in html
+<p class="col-md-7">some characters are reserved in HTML
 if you use the less than (>) or greater than (>)
-signs in your text, the browser migh mix them
+signs in your text, the browser might mix them
 with tags.
-character entities are used to display reserved characters in html. </p>
+Character entities are used to display reserved characters in HTML. </p>
 <p class="col-md-5 float-md-end"> <img width="100%" height="100%" src="../assest/786 (1).JPG"/>
     <img width="100%" height="100%" src="../assest/786 (2).JPG"/></p>
  <h2>1.non-breaking space</h2>
- <p> a commonly used entity in html is the non-breaking space
+ <p> A commonly used entity in HTML is the non-breaking space
     &-nbsp;
-a non-breaking space in a space than will not break into a new line
-two words separated by a non-breaking space will stics togather
-(not break into a new line). this is handy when breaking the words
-might be disruptive.for example (H&nbsp;2&nbsp;O)
+a non-breaking space in a space that will not break into a new line
+two words separated by a non-breaking space will stick together
+(not break into a new line). This is handy when breaking the words
+might be disruptive.  For example (H&nbsp;2&nbsp; O)
  </p>
 <h2>2.html symbol intities</h2>
-<p class="col-md-7">many mathimatical technical and currecy symbols, are not
+<p class="col-md-7"> Many mathematical technical and currency symbols, are not
 present on a normal keyboard
-to add with symbol to an html page. you can use an html intity
+to add with symbol to an HTML page. You can use an HTML entity.
 
-if no entity name exists you can use an entity number a decimal or a hexadecimal reference.
+If no entity name exists you can use an entity number a decimal or a hexadecimal reference.
 </p>
 <p class="col-md-5"><img src="../assest/7862.JPG"/></p>
 
 <h1>using emojis in html:&#128514; &#128515; &#128516; </h1>
 
 <p>emojis are character form the utf-8 character set:</p>
-<h2>what are emojis?</h2>
-<p>emojis looks like images. or icons but they are not.
-they are letter (character) from utf-8 (unicode) character set.
+<h2> What are emojis?</h2>
+<p>emojis look like images. or icons but they are not.
+They are letters (characters) from the utf-8 (Unicode) character set.
  </p>
-<h2>the html charset attribute: </h2>
-<p>to display an html page correctly, a web browser must show the character set used in the page.
+<h2>the HTML charset attribute: </h2>
+<p>t To display an HTML page correctly, a web browser must show the character set used in the page.
 this is specified in the &#60;meta&#62; tag.
 &#60;meta charset="utf-8"&#62;</p>
 <h2>UTF-8 characters:</h2>
-<p>many UTF-8 characters cannot be typed on a keyboard, but they can
+<p>m ManyUTF-8 characters cannot be typed on a keyboard, but they can
 always be displayed using numbers (called entity numbers)
 A is 65
 B is 66
 c is 67</p>
 <h2>emoji characters:</h2>
-<p>emojis are also characters from the UTF-8 alphabet:
+<p>e Emojis are also characters from the UTF-8 alphabet:
    &#128516; is 128516
    &#128525; is 128525
-since emojis are characters, they can be copied, displayed and sized
-just like any other character in html 
+since emojis are characters, they can be copied, displayed, and sized
+just like any other character in HTML 
 &#128507; is #128507;
 &#128508; is #128508;
 &#128509; is #138509;
