--- a/HTML Introduction/index.html
+++ b/HTML Introduction/index.html
@@ -157,44 +157,44 @@ width font(usally courier). and it preserves both spaces and line breaks.</p></p
         </li>
         <li>
             <h2>html &lt;q&gt; for short quotations</h2>
-            <p> the html &lt;q&gt;tag defines a<q>short quatation</q> </p>
+            <p> the HTML &lt;q&gt;tag defines a<q>short quatation</q> </p>
         </li>
         <li>
             <h2>html &lt;abbr&gt; for abbraviations</h2>
-            <p>the html &lt;abbr&gt; tag defines an abbreviation like <abbr title="hypertext markup language">HTML </abbr>
+            <p>the HTML &lt;abbr&gt; tag defines an abbreviation like <abbr title="hypertext markup language">HTML </abbr>
                     CSS, Mr, Dr, ASAP, ATM
-                    marking abbreviation can give useful information to browsers.<br>
+                    marking abbreviations can give useful information to browsers.<br>
                     translation systems and search engines.<br>
-                    <p>tip: use the global title attribute to show the desription for the abbreviation when you mouse
+                    <p> Tip: use the global title attribute to show the description for the abbreviation when you mouse
                         over the element</p>
         </li>
         <li>
             <h2>html &lt;address&gt; for contact information </h2>
-            <p class="i">the html &lt;address&gt; tag defines the contact information for the author/owner of a document or
+            <p class="i"> The HTML &lt;address&gt; tag defines the contact information for the author/owner of a document or
                     an article
-                    the contact information can be an email address, url,physical address phone number, social media,
+                    the contact information can be an email address, URL,physical address phone number, social media,
                     handle, etc.<br>
-                    the text in the &lt;address&gt; element usually renders in italic and browser will always add a line
+                    the text in the &lt;address&gt; element usually renders in italics and the browser will always add a line
                         break before and after the &lt;address&gt; element.</p>
         </li>
         <address>phone:03021905493
         email: aonecomputers420@gmail.com
-        House: rind jada
+        House: rind Jada
         </address>
 <li><h2>html &lt;cite&Gt; for work title</h2>
-<p class="i"><cite><b>the html &lt;cite&gt; tag defines the title of a creative work</b></cite> (eg, a book, a poem, a song, a movie,
+<p class="i"><cite><b>the HTML &lt;cite&gt; tag defines the title of a creative work</b></cite> (eg, a book, a poem, a song, a movie,
      a painting, etc.)<br>
 the text in the &lt;cite&gt; element usually renders in italic</p></li>
 <li><h2>html &lt;bdo&gt; for Bi-direction override</h2>
-<p>BDO stands for bi directional override.the html &lt;bdo&gt; tag is used to override the current text direction.</p>
+<p>BDO stands for bi-directional override. the HTML &lt;bdo&gt; tag is used to override the current text direction.</p>
 <bdo dir="rtl">this is right to left paragraph</bdo></li>
 <li><h2>html comment tag</h2>
-<p>you can add comment to your html source by using the following syntex.
-comments are also great for debuging html, becuase you can comment out html lines of code , one at a time to search for errors like
+<p> You can add comments to your HTML source by using the following syntax.
+comments are also great for debugging HTML, because you can comment out HTML lines of code, one at a time to search for errors like
  thet <br><br>
  &lt;!--write comment here--&gt; </p></li></ol>
 <h1>html links</h1>
-<ol>there are to types of links.
+<ol> There are two types of links.
 <li>absolute links</li><li>relative links</li></ol>
 <h2>relative url</h2>
 <ul><li>within a folder</li>
@@ -202,7 +202,7 @@ comments are also great for debuging html, becuase you can comment out html line
 <li>grand child foler</li>
 <li>parent folder</li>
 <li>grand parent folder</li></ul>
-<h2>creating bookmark in a page with links</h2>
+<h2> Creating a bookmark on a page with links</h2>
 <p id="end"> linking with another tags.</p>
 
 
