--- a/HTML Multimedia/index.html
+++ b/HTML Multimedia/index.html
@@ -182,34 +182,34 @@ your browser does not support the audio element&lt;/audio&gt;</p>
 </div>
 <div class="row">
 <audio class="col-sm-6 col-md-4" controls><source src="../assest/abc (1).mp3" type="audio/mp3"></audio>
-<audio class="col-sm-6 col-md-4" controls autoplay><source src="../assest/abc (2).mp3" type="audio/mp3"></audio>
+<audio class="col-sm-6 col-md-4" controls autoplay><source src="../assest/ABC (2).mp3" type="audio/mp3"></audio>
 <audio class="col-sm-6 col-md-4" controls><source src="../assest/ishaqkhan.mp3" type="audio/mp3"></audio>
 </div>
 <h2>HTML Audio- How it works</h2>
 <div class="row">
-<p class="col-md-8 mx-auto" style="background-color: cadetblue;">the controls attribute adds audio controls like play pause
+<p class="col-md-8 mx-auto" style="background-color: cadet blue;">the controls attribute adds audio controls like play pause
    and volume.<br><br>
-the &lt;source&gt; element allows you to specify altranative audio files which the browser may choose
+the &lt;source&gt; element allows you to specify alternative audio files that the browser may choose
  form the 
-browser will use the first recognised format.<br><br>
+the browser will use the first recognized format.<br><br>
 the text between the &lt;audio&gt; tags will only be displayed in browsers that do not support the
 &lt;audio&gt; element.</p>
 <h2 class="col-md-12">HTML Attributes,id and class diffrence</h2>
-<p class="col-md-5">html attributes provide addtional information about html elements.</p>
+<p class="col-md-5">html attributes provide additional information about html elements.</p>
 <h3 class="col-md-3">HTML Attributes:</h3>
-<ul class="col-md-4"><li>All html elements can have attributes</li>
-<li>Attributes provide additional information about element.</li></ul>
+<ul class="col-md-4"><li>All HTML elements can have attributes</li>
+<li>Attributes provide additional information about the element.</li></ul>
 </div>
 <h2>The href and src Attribute</h2>
 <div class="row">
 <p class="col-md-5">the &lt;a&gt; tag defines a hyperlink.the href attribute specifies the URL of the page the link
    goes to:</p>
 <h3 class="col-md-2">Example</h3>
-<p class="col-md-5">&lt;a href="https://beqabil.com/"&gt;visit beqabil.com&lt;/a&gt;</p>
+<p class="col-md-5">&lt;a href="https://beqabil.com/"&gt;visit bewail.com&lt;/a&gt;</p>
 </div>
 <h3>The src Attribute</h3>
-<p style="background-color: aquamarine;">the &lt;img&gt; tag is used to set an image on html page.
-the src attribute is used to the image to be display in page.<br><br>
+<p style="background-color: aquamarine;"> The &lt;img&gt; tag is used to set an image on html page.
+The src attribute is used for the image to be displayed on the page.<br><br>
 Example:<br><br>&lt;img src="img_girl.jpg"&gt;</p>
 <div class="row">
 <img class="col-sm-6 col-md-4" height="400px" src="../assest/girl.jpg" alt="browser not supported"/>
@@ -224,11 +224,11 @@ Example:<br><br>&lt;img src="img_girl.jpg"&gt;</p>
 <h2>The alt Attribute</h2>
 <p style="color: blue;">the required alt attribute for the &lt;img&gt; tag specifies an alternate
    text for an
-image. if the image for some reason cannot be displayed.this can be due to a slow connection or 
+image. If the image for some reason cannot be displayed. this can be due to a slow connection or 
 an error in
-the src attribute or if user uses a screen reader.</p>
+the src attribute or if the user uses a screen reader.</p>
 <h2>The style and title Attribute</h2>
-<p style="color:blue;"> the style attribute is used to add styles to an element.such as color font 
+<p style="color: blue;"> The style attribute is used to add styles to an element.such as color font 
   size and more</p>
 <h3>Example</h3>
 <p style="color: red;">&lt;p style="color;red;"&gt; this is a red paragaraph</p>
