--- a/Helpers/index.html
+++ b/Helpers/index.html
@@ -636,7 +636,7 @@ $icon-link-icon-transform:    translate3d(.25em, 0, 0);
 
 <!-- Inline level -->
 <span class="d-inline-block text-truncate" style="max-width: 250px;">
-  This text is quite long, and will be truncated once displayed.
+  This text is quite long and will be truncated once displayed.
 </span></div>
 
 <h1 class="text-center">vertical rule</h1>
