--- a/List Groups and Modals/index.html
+++ b/List Groups and Modals/index.html
@@ -857,8 +857,8 @@ remove the fade class form yur modal markup.</p>
         This is some placeholder content to show a vertically centered modal. We've added some extra copy
         here to show how vertically centering the modal works when combined with scrollable modals. We
         also use some repeated line breaks to quickly extend the height of the content, thereby 
-        triggering the scrolling. When content becomes longer than the predefined max-height of modal,
-         content will be cropped and scrollable within the modal.
+        triggering the scrolling. When content becomes longer than the predefined max height of the modal,
+         the content will be cropped and scrollable within the modal.
        This is a vertically centered modal. 
        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>good bye
       </div>
